[tool.poetry]
name = "repl-nix-test-sql-flask"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_test_sql_flask"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
jsonify = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
